# duckapi

./: .env  .gitignore  .sqlfluff  Makefile  README.md  pyproject.toml
data/: expected_analysis.json
duckapi/: api.py
duckapi_dbt/: dbt_project.yml  profiles.yml
duckapi_dbt/models/: analysis.sql  group_event_values.sql
duckapi_dbt/models/analyses/: group_sets.sql  group_sums.sql  hist_event_values.sql  hist_group_event_values.sql  hist_groups.sql
duckapi_dbt/seeds/: example_group_event_values.csv  schema.yml
duckapi_dbt/tests/: validate_results.sql
tests/: test_api.py  test_entry.py
